--- a/src/index.css
+++ b/src/index.css
@@ -304,6 +304,18 @@ h1 {
   top: 0px
 }
 
+.top-3 {
+  top: 3%
+}
+
+.top-5 {
+  top: 5%
+}
+
+.top-10 {
+  top: 10%
+}
+
 .top-\[25\%\] {
   top: 25%
 }
@@ -635,7 +647,7 @@ h1 {
 }
 
 .text-2xl {
-  font-size: 1.5rem;
+  font-size: 1.875rem;
   line-height: 2rem
 }
 
