--- a/src/index.css
+++ b/src/index.css
@@ -316,8 +316,49 @@ h1 {
   top: 10%
 }
 
+.top-18 {
+  top: 18%
+}
+
+.top-20 {
+  top: 20%;
+}
+
+.top-\[11\%\] {
+  top: 11%
+}
+
+.top-\[12\%\] {
+  top: 12%
+}
+
+.top-\[13\%\] {
+  top: 13%
+}
+
+.top-\[15\%\] {
+  top: 15%
+}
+
+.top-\[16\%\] {
+  top: 16%
+}
+
+
+.top-\[20\%\] {
+  top: 20%
+}
+
+.top-\[23\%\] {
+  top: 23%
+}
+
 .top-\[25\%\] {
   top: 25%
+}
+
+.top-\[30\%\] {
+  top: 30%
 }
 
 .top-1\/2 {
@@ -327,6 +368,11 @@ h1 {
 .top-\[22\%\] {
   top: 22%
 }
+
+.top-\[34\%\] {
+  top: 34%
+}
+
 
 .top-\[51\.5\%\] {
   top: 51.5%
